force-app/main/default/objects/Event_Alert__e/Event_Alert__e.object-meta.xml
<CustomObject>
    <label>Event Alert</label>
    <pluralLabel>Event Alerts</pluralLabel>
</CustomObject>