force-app/main/default/objects/Event_Alert__e/fields/Alert_Time__c.field-meta.xml
<CustomField>
    <fullName>Alert_Time__c</fullName>
    <label>Alert Time</label>
    <type>DateTime</type>
</CustomField>