force-app/main/default/objects/Event_Alert__e/fields/Connected_App__c.field-meta.xml
<CustomField>
    <fullName>Connected_App__c</fullName>
    <label>Connected App</label>
    <length>255</length>
    <type>Text</type>
</CustomField>